--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,8 @@
 [profile.default]
-src = "src"
+src = "contracts"
 out = "out"
 libs = ["lib"]
+
+[[profile.toolchain]]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
